# lscopyableitem

./: CMakeLists.txt
include/ls/: CopyableItem.h
src/ls/: CopyableItem.cpp
